# MasterThesis_QAP_CUDA

./: CMakeLists.txt  README.md  main.cpp  results.txt
data/results/: bur26a_cpu_abc.txt  bur26a_gpu_classic.txt  chr12a_cpu_abc_cond.txt  chr12a_cpu_classic_cond.txt  chr12a_gpu_abc.txt  chr15a_cpu_classic_cond.txt  chr15a_gpu_abc_cond.txt  chr18a_cpu_classic_cond.txt  chr18a_gpu_abc_cond.txt  chr18a_gpu_classic_cond.txt  chr20a_cpu_abc.txt  chr20a_gpu_abc.txt  chr20a_gpu_abc_cond.txt  chr20a_gpu_classic.txt  chr20a_gpu_classic_cond.txt  chr22a_cpu_classic.txt  chr22a_gpu_abc.txt  chr22a_gpu_abc_cond.txt  chr25a_cpu_classic.txt  chr25a_cpu_classic_cond.txt  chr25a_gpu_abc.txt  chr25a_gpu_abc_cond.txt  els19_cpu_abc.txt  els19_cpu_classic.txt  els19_gpu_classic_cond.txt  esc16a_cpu_abc.txt  esc16a_gpu_abc.txt  esc16a_gpu_abc_cond.txt  esc16a_gpu_classic.txt  esc16a_gpu_classic_cond.txt  esc32e_cpu_abc.txt  esc32e_cpu_abc_cond.txt  esc32e_cpu_classic_cond.txt  esc32e_gpu_classic.txt  kra30a_cpu_abc_cond.txt  kra30a_gpu_classic.txt  lipa40a_cpu_abc_cond.txt  lipa40a_gpu_abc.txt  lipa40a_gpu_abc_cond.txt  lipa40a_gpu_classic.txt  (+87 more)
data/results1/: bur26a_cpu_abc_cond.txt  bur26a_cpu_classic.txt  bur26a_cpu_classic_cond.txt  bur26a_gpu_abc.txt  bur26a_gpu_abc_cond.txt  bur26a_gpu_classic_cond.txt  chr12a_cpu_abc.txt  chr12a_cpu_classic.txt  chr12a_gpu_abc_cond.txt  chr12a_gpu_classic.txt  chr12a_gpu_classic_cond.txt  (+108 more)
include/: bee_algorithm.hpp  population.hpp  solution.hpp
src/: bee_algorithm.cpp  bee_algorithm.cu  main.cu  population.cpp  solution.cpp  solution.cu
(+384 files in other folders)
